Fri Apr 23 20:25:05 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* Kokyu/Kokyu_defs.h:
	* Kokyu/Kokyu_defs.i:

	  Changed return types for equality operators to "bool", as is the
	  norm for modern C++.

Fri Apr 23 12:50:34 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/Config_Test.cpp (iniCompare):

	  Changed type of equality flag variable from an "int" to a
	  "bool".  Addresses a "'&=' : unsafe mix of type 'int' and type
	  'bool' in operation" warning exhibited by MSVC++ 6.

Fri Apr 23 11:23:04 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Local_Tokens.cpp:
	* ace/Local_Tokens.h:
	* ace/Timeprobe.h:

	  Do not include "ace/Synch{_T}.h".  Include less expensive ones
	  instead.  Fixes a "fuzz" error.

	* ace/Token_Manager.h:

	  Moved "ace/Map_Manager.h" inclusion within the
	  ACE_HAS_TOKENS_LIBRARY block.  There is no need to include it if
	  that macro isn't defined.

Fri Apr 23 11:14:51 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/Smart_Pointers/Widget_Impl.h:

	  Include "ace/Synch_Traits.h" and "ace/Thread_Mutex.h".
	  Necessitated by header inclusion reductions in
	  "ace/Refcounted_Auto_Ptr.*".

Fri Apr 23 15:01:23 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Thread_Manager_Test.cpp:
          When ACE_LACKS_PTHREAD_KILL has been defined, don't fail on a
          non supported kill. Thanks to Martin Corino <mcorino@remedy.nl>
          for extending this.

Fri Apr 23 14:49:21 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.pl:
          Changed the way we integrate with Codeguard. Removed the -g
          commandline option and use "-Config Codeguard" to enable
          inspection of codeguard logs. This is much easier to maintain
          and this way the bin/auto_run_tests.pl doesn't need to be
          modified.

Fri Apr 23 10:30:31 2004  Steve Huston  <shuston@riverace.com>

	* tests/Recursive_Condition_Test.cpp: Missed a variable change.
